# camera-people-counter

./: .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  SEARCH_SOLUTION.md  analytics.py  app.py  config.py  config.yaml  db.py  docker-compose.yml  health.py  pyproject.toml  requirements-snapshot.txt  snapshot_counter.py  startup_check.py
src/search/: __init__.py  __main__.py  api.py  cli.py  config.py  exceptions.py  formatters.py  models.py
templates/: dashboard.html
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_db.py  test_formatters.py  test_integration.py
